<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/bgr"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/grey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:hint="@string/bg_strinh_photo"
        android:textColorHint="@color/black"
        android:textSize="60sp"
        android:gravity="center"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:layout_alignBottom="@id/bgr"
        android:layout_alignEnd="@id/bgr"
        android:layout_margin="20dp"
        app:tint="@color/white"/>
    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_below="@id/bgr"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignStart="@id/editTextTitle"
        android:layout_below="@id/editTextTitle"
        android:hint="@string/price"/>
    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/editTextPrice"
        android:layout_below="@id/editTextTitle"
        android:layout_alignEnd="@id/editTextTitle"
        android:hint="@string/location"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_location_on_24"
        android:layout_alignEnd="@id/editTextLocation"
        android:layout_alignTop="@id/editTextLocation"/>
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignStart="@id/editTextPrice"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/editTextPrice"
        android:hint="@string/description"/>
    <EditText
        android:id="@+id/editTextInventory"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDescription"
        android:layout_alignStart="@id/editTextDescription"
        android:layout_marginTop="40dp"
        android:hint="@string/inventory"/>
    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:layout_alignEnd="@id/editTextDescription"
        android:layout_alignTop="@id/editTextInventory"
        />

</RelativeLayout>