<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIN"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/text_border"
        android:hint="@string/email"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="20dp"
        android:textSize="30sp"
        android:textStyle=""/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/text_border"
        android:hint="@string/pass"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="20dp"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textStyle="bold"
            android:textSize="18sp"
            android:checked="true"
            android:buttonTint="@color/blue"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgotPass"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="160dp"
        android:text="@string/signIN"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@drawable/text_border"
        app:backgroundTint="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/justSignIn"
        android:textColor="@color/black"
        android:gravity="center|bottom"
        android:paddingBottom="10dp"
        android:textSize="18sp"/>

</LinearLayout>