<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TableRow
        android:minHeight="40dp"
        android:layout_margin="13dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_folder_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20sp"
            android:gravity="start|center"
            android:text="@string/attractions" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_local_dining_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/dining" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_school_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/education" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_group_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/family" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_favorite_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/health" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_apartment_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/office" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_shopping_cart_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/promotions" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_radio_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/radio" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_book_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/recipes" />
    </TableRow>
    <TableRow
        android:layout_margin="13dp"
        android:minHeight="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_directions_bike_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:layout_marginStart="20sp"
            android:text="@string/sport" />
    </TableRow>


</TableLayout>