<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIN"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:textSize="30sp"
        android:background="@drawable/text_border"
        android:layout_below="@id/textViewSignIn"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/pass"
        android:paddingStart="20dp"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/editTextEmail"
        android:layout_alignEnd="@id/editTextEmail"
        android:background="@drawable/text_border"
        android:layout_below="@id/editTextEmail"/>
    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textStyle="bold"
        android:textSize="18sp"
        android:checked="true"
        android:buttonTint="@color/blue"
        android:layout_below="@id/editTextPassword"
        android:layout_alignStart="@id/editTextPassword"
        android:layout_marginTop="35dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPass"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="45dp"
        android:layout_alignEnd="@id/editTextPassword"/>
    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/signIN"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:background="@drawable/text_border"
        app:backgroundTint="@color/black"
        android:layout_below="@id/checkBoxRemember"
        android:layout_alignEnd="@id/editTextPassword"
        android:layout_alignStart="@id/editTextPassword"
        android:layout_marginTop="160dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/justSignIn"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:layout_below="@id/buttonSignIn"
        android:gravity="center|bottom"/>
</RelativeLayout>