<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/bg_photo_fill"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/bg_photo_fill"
        app:layout_constraintBottom_toBottomOf="@+id/bg_photo_fill"
        android:text="@string/bg_strinh_photo"
        android:textSize="60sp"
        android:textColor="@color/black"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@id/bg_photo_fill"
        app:layout_constraintEnd_toEndOf="@id/bg_photo_fill"
        android:layout_margin="20dp"
        app:tint="@color/white" />
    <EditText
        android:id="@+id/editTextTitle"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bg_photo_fill"
        android:hint="@string/title"
        android:autofillHints="@string/title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/editTextPrice"
        android:inputType="text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintStart_toStartOf="@id/editTextTitle"
        android:hint="@string/price"
        android:autofillHints="@string/price"/>
    <EditText
        android:id="@+id/editTextLocation"
        android:inputType="text"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintEnd_toEndOf="@id/editTextTitle"
        android:hint="@string/location"
        android:autofillHints="@string/location"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="@id/editTextLocation"
        app:layout_constraintTop_toTopOf="@id/editTextLocation" />
    <EditText
        android:id="@+id/editTextDescription"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPrice"
        app:layout_constraintStart_toStartOf="@id/editTextPrice"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/description"
        android:autofillHints="@string/description"/>
    <EditText
        android:id="@+id/editTextInventory"
        android:inputType="text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@id/editTextDescription"
        android:layout_marginTop="40dp"
        android:hint="@string/inventory"
        android:autofillHints="@string/inventory"/>
    <EditText
        android:layout_width="120dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:autofillHints="@string/weight"
        app:layout_constraintEnd_toEndOf="@id/editTextDescription"
        app:layout_constraintTop_toTopOf="@id/editTextInventory"
        />
</androidx.constraintlayout.widget.ConstraintLayout>